see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Aug-2013 Jean-Marie Simonet
 # [#31411] Show Offline image only if it exists. Thanks Tobias Zulauf
 # [#31360] The site is offline but anyhow the error page will show (e.g. at a 404 error). Thanks Mihail Irintchev
 # [#31630] email cloaking inserts space (2.5.13). Thanks Peter Martin and Marc Antoine Thevenet

-------------------- 2.5.14 Stable Release 01-August-2013] ------------------

31-Jul-2013 Jean-Marie Simonet
 # Missing list of Subcategories in a blog view. Revert [#30150]

-------------------- 2.5.13 Stable Release 25-July-2013] ------------------

21-Jul-2013 Mark Dexter
 ^ [#31319] registration option disabled by default is safer. Thanks Brian Teeman.

19-Jul-2013 Jean-Marie Simonet
 # Performance bug - Initial patch partially reverted  2.5 Fix (Regression)/ Thanks Thomas Hunziker

17-Jul-2013 Jean-Marie Simonet
# [#31477] Remove unneeded GROUP BY and fix duplicate article display. Thanks Thomas Hunziker

06-Jul-2013 Jean-Marie Simonet
 $ [#31290] Add Debug User Group Help Screen language string. Thanks George Wilson
 # [#31348] Regression for plugin filter search with spaces in the title. Reverting
 # [#27935] 'Next' button not working on first try after login in com_users. Thanks Antonio Durán Terrés and Brian Teeman

01-Jul-2013 Jean-Marie Simonet
 # [#31280] Loadmodule support for htmlspecialchars in title. Thanks Peter Wiseman

13-Jun-2013 Jean-Marie Simonet
 # [#31108] Fatal erorr right after install. Thanks Klas and Michael Babker
 # [#31120] [2.5] *plug-in manager search give errors and warning for '/','*' and '\