@@ -30,6 +30,7 @@ COM_MEDIA_ERROR_BEFORE_SAVE_MORE="Some errors occur before saving the media: %s"
 COM_MEDIA_ERROR_CREATE_NOT_PERMITTED="Create not permitted"
 COM_MEDIA_ERROR_FILE_EXISTS="File already exists"
 COM_MEDIA_ERROR_UNABLE_TO_CREATE_FOLDER_WARNDIRNAME="Unable to create directory. Directory name must only contain alphanumeric characters and no spaces."
+COM_MEDIA_ERROR_UNABLE_TO_BROWSE_FOLDER_WARNDIRNAME="Unable to browse:&#160;%s. Directory name must only contain alphanumeric characters and no spaces."
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FILE_WARNFILENAME="Unable to delete:&#160;%s. File name must only contain alphanumeric characters and no spaces."
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FOLDER_NOT_EMPTY="Unable to delete:&#160;%s. Folder is not empty!"
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FOLDER_WARNDIRNAME="Unable to delete:&#160;%s. Directory name must only contain alphanumeric characters and no spaces."
