@@ -20,6 +20,7 @@ COM_MEDIA_DIRECTORY_UP="Directory Up"
 COM_MEDIA_ERROR_BAD_REQUEST="Bad Request"
 COM_MEDIA_ERROR_FILE_EXISTS="File already exists"
 COM_MEDIA_ERROR_UNABLE_TO_CREATE_FOLDER_WARNDIRNAME="Unable to create directory. Directory name must only contain alphanumeric characters and no spaces."
+COM_MEDIA_ERROR_UNABLE_TO_BROWSE_FOLDER_WARNDIRNAME="Unable to browse:&#160;%s. Directory name must only contain alphanumeric characters and no spaces."
 COM_MEDIA_ERROR_UNABLE_TO_DELETE=" Unable to delete:&#160;"
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FILE_WARNFILENAME="Unable to delete:&#160;%s. File name must only contain alphanumeric characters and no spaces."
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FOLDER_NOT_EMPTY="Unable to delete:&#160;%s. Folder is not empty!"
