@@ -32,7 +32,7 @@ var MediaManager = this.MediaManager = {
 				   	uri = this._getUriObject(this.frameurl);
 				   	current	= uri.file+'?'+uri.query;
 
-					if (current != 'undefined?undefined' && current != node.data.url) {
+					if (current != 'undefined?undefined' && current != encodeURI(node.data.url)) {
 						window.frames[target].location.href = node.data.url;
 					}
 				}.bind(this)
